<resources>
    <string name="app_name">Schitayu</string>
    <string name="title_activity_navigation">navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="share_text">Hey friend , i am using "GCOEAN'S SCHITAYU  APP" This app is what  all we need !(Design and Develop by students of  GCOEA CSE BATCH 2015-2019) this is great have a look : : https://play.google.com/store/apps/details?id=com.rrbofficial.btrapplock </string>


    <string name="updateline">this app is minor project of gcoea CSE 3rd year students (Batch of 2015-2019)namely ,Rohit Balage,Bhagyashri Sawarkar,Tejas Tipre</string>
    <string name="appsms"> (this message is send by using Gcoeans Schitayu App) \n download now :
        https://play.google.com/store/apps/details?id=com.rrbofficial.btrapplock
    </string>
    <string name="rohit"><a href="http://wwww.rrbofficial.com"></a></string>
    <string name="msg">Please enable all permission for SHITAYU</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="action_example">Settings</string>
    <string name="title_activity_navigatio">navigatio</string>
    <string name="title_activity_send_sms">sendSMSActivity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="title_activity_receive_sms">receiveSMSActivity</string>
    <string name="runtime_permissions_txt">20</string>
    <string name="camera">camera</string>
    <string name="background">background</string>
    <string name="title_activity_homenavi">homenavi</string>
    <string name="title_activity_gcoeasite">gcoeasite</string>
    <string name="title_activity_youtube">youtube</string>
    <string name="title_activity_voot">voot</string>
    <string name="title_activity_facebook">facebook</string>
    <string name="title_activity_tutorialspoint">tutorialspoint</string>
    <string name="title_activity_instagram">Instagram</string>
    <string name="title_activity_hotstar">hotstar</string>
    <string name="title_activity_feedback">feedback</string>
    <string name="title_activity_map">map</string>
    <string name="title_activity_mapactivty">Map</string>
    <string name="title_activity_schitayuhome">schitayuhome</string>

    <string name="linkteaser">https://www.youtube.com/watch?v=vf9Fa8g3Hs0</string>

    <string name="aboutapp">The Word "Schitayu" is taken from Russian Language which actually means "I Think" or  "I Beleive" \n
"Gcoean's Schitayu" is an efforts of CSE 3rd year students of Government College Of Engineering, Amravati.(Batch of 2015-2019) in an idea of collaboration whole android system on one platform.
"Gcoean's Schitayu" is an minor project of Rohit Balage,Bhagyashri Sawarkar,Tejas Tipre during their academic section (VI Sem Summer 2018).\n later knowing the significance and uniqueness of an app the  project of Schitayu is extended to major one too (August 2018).
and further the team becomes Strong lead with adding askhay as new member.
\nThis app invokes the multiple functions that daily user need to be interact.
\n
*Wondering about why "Gcoean's Schitayu?
The word Schitayu means  "Beleive". so as per name extends the developers of an app is mean on beleiving on the concept of collaboration of android system with low RAM uses and battery consumption.</string>
    <string name="myschitayuupdates">This app is a minor project of CSE 3rd year students(Batch of 2015-2019)Namely,Rohit Balage ,Bhagyashri Sawarkar,Tejas tipre and akshay tagde stay tunned for more updates..</string>
    <string name="sign_in" />
    <string name="title_activity_linkedin">linkedin</string>
    <string name="title_activity_amazon">amazon</string>
    <string name="title_activity_allnovel">allnovel</string>
    <string name="title_activity_flipcart">flipcart</string>
    <string name="title_activity_cartoonnetwork">cartoonnetwork</string>
    <string name="title_activity_discovery">discovery</string>
    <string name="title_activity_allapk">allapk</string>
    <string name="mike">mike</string>
    <string name="social">E/social</string>
    <string name="Gocea">Gcoea</string>
    <string name="shareapp">Share app</string>
    <string name="Esocial">E/Social</string>
    <string name="SchitayuTV">Schitayu Tv</string>
    <string name="Rateapp">Rate app</string>
    <string name="title_activity_schitayutv">schitayutv</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_videoview">videoview</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
